   2to3 conversion program.  When installing via setup.py or a PyPI
   distribution mechanism, this conversion should automatically
   happen.

   Note that the API under Python 3 will be slightly different.
   Mainly there will be some cases in which byte array types are used
   or returned rather than strings.

   Read the file "docs/PYTHON3.txt" for complete information.

 * Unicode: When outputting JSON certain additional characters in
   strings will now always be \u-escaped to increase compatibility
   with JavaScript.  This includes line terminators (which are
   forbidden in JavaScript string literals) as well as format control
   characters (which any JavaScript implementation is allowed to
   ignore if it chooses per the ECMAscript standard).

   This essentially means that characters in any of the Unicode
   categories of Cc, Cf, Zl, and Zp will be \u-escaped; which includes
   for example:

       - U+007F  DELETE               (Category Cc)
       - U+00AD  SOFT HYPHEN          (Category Cf)
       - U+200F  RIGHT-TO-LEFT MARK   (Category Cf)
       - U+2028  LINE SEPARATOR       (Category Zl)
       - U+2029  PARAGRAPH SEPARATOR  (Category Zp)
       - U+E007F CANCEL TAG           (Category Cf)

 * Mutable strings: Support for the old Python MutableString type has
   been dropped.  That experimental type had already been deprecated
   since Python 2.6 and removed entirely from Python 3.  If you have
   code that passes a MutableString to a JSON encoding function then
   either do not upgrade to this release, or first convert such types
   to standard strings before JSON encoding them.

 * The "jsonlint" command script will now be installed by default.

 * jsonlint class: Almost all the logic of the jsonlint script is now
   available as a new class, demjson.jsonlint, should you want to call
   it programatically.

   The included "jsonlint" script file is now just a very small
   wrapper around that class.

 * Other jsonlint improvements: